<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_compartilhar"
        android:orderInCategory="100"
        android:title="@string/menucompartilhar"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_faleconosco"
        android:orderInCategory="100"
        android:title="@string/menufale_conosco"
        android:icon="@android:drawable/ic_dialog_email"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_atualiza"
        android:orderInCategory="100"
        android:title="@string/menuatualiza_pre_os"
        app:showAsAction="never" />


</menu>
