<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.ascenderideias.www.ajudadecusto.Principal">

    <LinearLayout
        android:id="@+id/Veiw_ajuda_de_custo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/origem"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/get_cidorigem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destino"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/get_ciddestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distancia_em_km"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/get_distkm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|numberDecimal"
            android:selectAllOnFocus="true"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo_de_combustivel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spn_combustivel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="match_parent" />

        <TextView
            android:id="@+id/TextView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor_do_litro"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/v_vallitro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName|numberDecimal"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autonomia_m_dia_km_l"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/get_autonomia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|numberDecimal"
            android:selectAllOnFocus="true"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="413dp">

            <Button
                android:id="@+id/bt_ida"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="3"
                android:text="@string/ida_ou_volta"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider"
                android:layout_width="38dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/bt_idaevolta"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="3"
                android:text="@string/ida_e_volta"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"

                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/ajuda_de_custo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/calculo_ajudacusto"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:contentDescription="@string/zero"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName|numberDecimal"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/bt_sair"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sair"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>
